--- a/Portfolio.html
+++ b/Portfolio.html
@@ -98,74 +98,194 @@
             <div class="container mx-auto px-4 flex items-center py-4 text-xl">
                 <div class="w-3/5 flex items-center ">
                     <h1 class="font-2 text-7xl leading-normal mt-20">
-                        <span class="font-2 text-7xl text-yellow-500">VR APP</span><br> DEVELOPMENT
+                        <span class="font-2 text-7xl text-yellow-500">PORTFOLIO</span><br> OF TWIN REALITY
                     </h1>
                 </div>
             </div>
         </div>
         <div class="my-28"></div>
-        <!-- form -->
-        <div class="service-form">
-            <div class="container mx-auto px-4 flex flex-col items-center py-4 text-xl">
-                <div class="form-contain w-full flex justify-evenly">
-                    <p class="font-light leading-relaxed tracking-wider ">
-                        Bring your ideas to life with our Virtual Reality company. Our team of experienced developers
-                        specializes in creating immersive, interactive VR experiences that<br> engage and captivate
-                        users. From gaming and entertainment to education and training, we can help you build a VR app
-                        to meet your specific needs and <br>goals.
-                    </p>
-                </div>
-                <div class="form w-full choose-bg p-16 mt-10">
-                    <form action="" method="get">
-                        <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-                            <div>
-                                <label for="first-name" class="block text-xl font-medium mb-3 text-zinc-400">First
-                                    Name</label>
-                                <input type="text" id="first-name" placeholder="Your First Name"
-                                    class="mt-1 block w-full bg-transparent text-white placeholder:text-zinc-600 border border-zinc-600 p-2 px-4 focus:ring-yellow-500 focus:border-yellow-500">
+        <div class="gradiant-2 gradiant-5 relative overflow-hidden">
+            <!-- gallery -->
+            <div class="gallery">
+                <div class="container mx-auto px-4 flex flex-col items-center py-4 text-xl">
+                    <div class="w-full flex justify-evenly">
+                        <a href="" class="p-2 px-6 bg-yellow-500">
+                            All
+                        </a>
+                        <a href="" class="p-2 px-7 bg-transparent border-2 border-zinc-500 hover:bg-zinc-500">
+                            AI
+                        </a>
+                        <a href="" class="p-2 px-7 bg-transparent border-2 border-zinc-500 hover:bg-zinc-500">
+                            Configurator
+                        </a>
+                        <a href="" class="p-2 px-7 bg-transparent border-2 border-zinc-500 hover:bg-zinc-500">
+                            Homepage
+                        </a>
+                        <a href="" class="p-2 px-7 bg-transparent border-2 border-zinc-500 hover:bg-zinc-500">
+                            Industrial VR Training
+                        </a>
+                        <a href="" class="p-2 px-7 bg-transparent border-2 border-zinc-500 hover:bg-zinc-500">
+                            Latest
+                        </a>
+                    </div>
+                    <div class="w-full flex justify-center mt-10">
+                        <a href="" class="p-2 px-7 bg-transparent border-2 border-zinc-500 hover:bg-zinc-500 mx-10">
+                            Virtual Reality
+                        </a>
+                        <a href="" class="p-2 px-7 bg-transparent border-2 border-zinc-500 hover:bg-zinc-500 mx-10">
+                            Webver
+                        </a>
+                        <a href="" class="p-2 px-7 bg-transparent border-2 border-zinc-500 hover:bg-zinc-500 mx-10">
+                            Virtual Events
+                        </a>
+                    </div>
+                    <div class="w-full flex mt-20">
+                        <div class="w-2/6 bg-cover w-full relative galleryImg transition duration-300 ease-in-out">
+                            <div class="">
+                                <img src="assets/image/gallery-1.png" alt="gallery-1">
                             </div>
-                            <div>
-                                <label for="last-name" class="block text-xl font-medium text-zinc-400 mb-3">Last
-                                    Name</label>
-                                <input type="text" id="last-name" placeholder="Your Last Name"
-                                    class="mt-1 block w-full bg-transparent text-white placeholder:text-zinc-600 border border-zinc-600 p-2 px-4 focus:ring-yellow-500 focus:border-yellow-500">
-                            </div>
-                        </div>
-                        <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mt-10">
-                            <div>
-                                <label for="email-address" class="block text-xl font-medium text-zinc-400 mb-3">Email
-                                    Address</label>
-                                <input type="email" id="email-address" placeholder="Your Email Address"
-                                    class="mt-1 block w-full bg-transparent text-white placeholder:text-zinc-600 border border-zinc-600 p-2 px-4 focus:ring-yellow-500 focus:border-yellow-500">
-                            </div>
-                            <div>
-                                <label for="role" class="block text-xl font-medium text-zinc-400 mb-3">Role</label>
-                                <input type="text" id="role" placeholder="Your Job Role"
-                                    class="mt-1 block w-full bg-transparent text-white placeholder:text-zinc-600 border border-zinc-600 p-2 px-4 focus:ring-yellow-500 focus:border-yellow-500">
-                            </div>
-                        </div>
-                        <div class="grid grid-cols-1 md:grid-cols-1 gap-6 mt-10">
-                            <div>
-                                <label for="message"
-                                    class="block text-xl font-medium text-zinc-400 mb-3">Message</label>
-                                <textarea id="message" rows="4" placeholder="Your Message"
-                                    class="mt-1 block w-full bg-transparent text-white placeholder:text-zinc-600 border border-zinc-600 p-2  focus:ring-yellow-500 focus:border-yellow-500">
-                                </textarea>
+                            <div
+                                class="gallery-img w-full h-20 opacity-0 transition duration-300 ease-in-out text-3xl font-bold text-center p-5 absolute bg-purple-600 right-0 bottom-0">
+                                Virtual Art Gallery
                             </div>
                         </div>
-                        <div class="grid grid-cols-1 md:grid-cols-1 gap-6 mt-10">
-                            <div>
-                                <button type="submit"
-                                    class="project-btn bg-sky-600 p-3 px-16 text-xl font-medium tracking-wider text-center">
-                                    SUBMIT
-                                </button>
+                        <div class="w-2/6 bg-cover w-full relative galleryImg transition duration-300 ease-in-out mx-10">
+                            <div class="">
+                                <img src="assets/image/gallery-2.png" alt="gallery-2">
+                            </div>
+                            <div
+                                class="gallery-img w-full h-20 opacity-0 transition duration-300 ease-in-out text-3xl font-bold text-center p-5 absolute bg-purple-600 right-0 bottom-0">
+                                Virtual Art Gallery
                             </div>
                         </div>
-                    </form>
+                        <div class="w-2/6 bg-cover w-full relative galleryImg transition duration-300 ease-in-out">
+                            <div class="">
+                                <img src="assets/image/gallery-3.png" alt="gallery-3">
+                            </div>
+                            <div
+                                class="gallery-img w-full h-20 opacity-0 transition duration-300 ease-in-out text-3xl font-bold text-center p-5 absolute bg-purple-600 right-0 bottom-0">
+                                Virtual Art Gallery
+                            </div>
+                        </div>
+                    </div>
+                    <div class="w-full flex mt-20">
+                        <div class="w-2/6 bg-cover w-full relative galleryImg transition duration-300 ease-in-out">
+                            <div class="">
+                                <img src="assets/image/gallery-4.png" alt="gallery-4">
+                            </div>
+                            <div
+                                class="gallery-img w-full h-20 opacity-0 transition duration-300 ease-in-out text-3xl font-bold text-center p-5 absolute bg-purple-600 right-0 bottom-0">
+                                Virtual Art Gallery
+                            </div>
+                        </div>
+                        <div class="w-2/6 bg-cover w-full relative galleryImg transition duration-300 ease-in-out mx-10">
+                            <div class="">
+                                <img src="assets/image/gallery-5.png" alt="gallery-5">
+                            </div>
+                            <div
+                                class="gallery-img w-full h-20 opacity-0 transition duration-300 ease-in-out text-3xl font-bold text-center p-5 absolute bg-purple-600 right-0 bottom-0">
+                                Virtual Art Gallery
+                            </div>
+                        </div>
+                        <div class="w-2/6 bg-cover w-full relative galleryImg transition duration-300 ease-in-out">
+                            <div class="">
+                                <img src="assets/image/gallery-6.png" alt="gallery-6">
+                            </div>
+                            <div
+                                class="gallery-img w-full h-20 opacity-0 transition duration-300 ease-in-out text-3xl font-bold text-center p-5 absolute bg-purple-600 right-0 bottom-0">
+                                Virtual Art Gallery
+                            </div>
+                        </div>
+                    </div>
+                    <div class="w-full flex mt-20">
+                        <div class="w-2/6 bg-cover w-full relative galleryImg transition duration-300 ease-in-out">
+                            <div class="">
+                                <img src="assets/image/gallery-7.png" alt="gallery-7">
+                            </div>
+                            <div
+                                class="gallery-img w-full h-20 opacity-0 transition duration-300 ease-in-out text-3xl font-bold text-center p-5 absolute bg-purple-600 right-0 bottom-0">
+                                Virtual Art Gallery
+                            </div>
+                        </div>
+                        <div class="w-2/6 bg-cover w-full relative galleryImg transition duration-300 ease-in-out mx-10">
+                            <div class="">
+                                <img src="assets/image/gallery-8.png" alt="gallery-8">
+                            </div>
+                            <div
+                                class="gallery-img w-full h-20 opacity-0 transition duration-300 ease-in-out text-3xl font-bold text-center p-5 absolute bg-purple-600 right-0 bottom-0">
+                                Virtual Art Gallery
+                            </div>
+                        </div>
+                        <div class="w-2/6 bg-cover w-full relative galleryImg transition duration-300 ease-in-out">
+                            <div class="">
+                                <img src="assets/image/gallery-9.png" alt="gallery-9">
+                            </div>
+                            <div
+                                class="gallery-img w-full h-20 opacity-0 transition duration-300 ease-in-out text-3xl font-bold text-center p-5 absolute bg-purple-600 right-0 bottom-0">
+                                Virtual Art Gallery
+                            </div>
+                        </div>
+                    </div>
+                    <div class="w-full justify-center items-center">
+                        <div class="text-center mt-8">
+                            <button class="project-btn bg-sky-600 mt-10 p-3 px-16 text-xl font-medium tracking-wider text-center uppercase">
+                                Load more
+                            </button>
+                        </div>
+                    </div>
                 </div>
             </div>
+            <div class="my-28"></div>
+            <!-- COMPANIES -->
+            <div class="company">
+                <div class="container mx-auto px-4 flex items-center py-4 text-xl">
+                    <div class="w-full text-center">
+                        <div class="">
+                            <h3 class="font-2 text-6xl">
+                                TRUSTED BY BIG COMPANIES
+                            </h3>
+                        </div>
+                        <div class="flex justify-between items-start mt-20">
+                            <div class="flex flex-col items-center">
+                                <div class="w-60 h-60">
+                                    <img class="object-cover" src="assets/image/company-1.png" alt="company-1"
+                                        style="height: 236px;">
+                                </div>
+                            </div>
+                            <div class="h-60 border border-zinc-50 border-solid opacity-10"></div>
+                            <div class="flex flex-col items-center">
+                                <div class="w-60 h-60">
+                                    <img class="object-cover" src="assets/image/company-2.png" alt="company-2"
+                                        style="height: 236px;">
+                                </div>
+                            </div>
+                            <div class="h-60 border border-zinc-50 border-solid opacity-10"></div>
+                            <div class="flex flex-col items-center">
+                                <div class="w-60 h-60">
+                                    <img class="object-cover object-center" src="assets/image/company-3.png"
+                                        alt="company-3" style="height: 236px;">
+                                </div>
+                            </div>
+                            <div class="h-60 border border-zinc-50 border-solid opacity-10"></div>
+                            <div class="flex flex-col items-center">
+                                <div class="w-60 h-60">
+                                    <img class="object-cover" src="assets/image/company-4.png" alt="company-4"
+                                        style="height: 236px;">
+                                </div>
+                            </div>
+                            <div class="h-60 border border-zinc-50 border-solid opacity-10"></div>
+                            <div class="flex flex-col items-center">
+                                <div class="w-60 h-60">
+                                    <img class="object-cover" src="assets/image/company-5.png" alt="company-5"
+                                        style="height: 236px;">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="my-28"></div>
         </div>
-        <div class="my-28"></div>
     </main>
     <footer>
         <div class="footer overflow-hidden">
