--- a/home.html
+++ b/home.html
@@ -82,14 +82,14 @@
     
                 <!-- Social Icons -->
                 <div class="hidden lg:flex space-x-4">
-                    <a href="" class="social-icon w-8 h-8 hover:opacity-75">
-                        <img src="assets/image/facebook.png" alt="facebook" class="w-full h-full">
+                    <a href="" class="social-icon w-10 h-10 hover:opacity-75">
+                        <img src="assets/image/facebook.png" alt="facebook" class="w-7 h-7">
                     </a>
-                    <a href="" class="social-icon w-8 h-8 hover:opacity-75">
-                        <img src="assets/image/twitter.png" alt="twitter" class="w-full h-full">
+                    <a href="" class="social-icon w-10 h-10 hover:opacity-75">
+                        <img src="assets/image/twitter.png" alt="twitter" class="w-7 h-7">
                     </a>
-                    <a href="" class="social-icon w-8 h-8 hover:opacity-75">
-                        <img src="assets/image/instragram.png" alt="instagram" class="w-full h-full">
+                    <a href="" class="social-icon w-10 h-10 hover:opacity-75">
+                        <img src="assets/image/instragram.png" alt="instagram" class="w-7 h-7">
                     </a>
                 </div>
             </div>
@@ -140,9 +140,9 @@
             <div class="container 2xl:container mx-auto px-4 flex items-center py-4 text-xl">
 
                 <div class="flex items-center  mt-40">
-                    <div class="banner-contain text-7xl ">
-                        <h1 class="font-2 2xl:text-6xl">
-                            Explorer A New <span class="text-yellow-500 font-2 2xl:text-6xl">World</span>
+                    <div class="banner-contain  ">
+                        <h1 class="font-2 text-7xl">
+                            Explorer A New <span class="text-yellow-500 font-2 text-7xl">World</span>
                             With
                         </h1>
                     </div>
@@ -153,7 +153,7 @@
                 <div class="w-96"></div>
                 <div class="w-96"></div>
                 <div class="flex">
-                    <h1 class="text-7xl z-10 font-2 2xl:text-6xl">
+                    <h1 class="text-7xl z-10 font-2">
                         TWIN <span class="text-yellow-500 font-2">REALITY</span>
                     </h1>
                 </div>
