--- a/Portfolio.html
+++ b/Portfolio.html
@@ -63,8 +63,8 @@
                                 <a href="service-vr-consoltion.html" class="hover:text-yellow-500">VR Consultation</a>
                             </div>
                         </li>
-                        <li><a href="VR-Times.html" class="text-yellow-500">AR/VR Times</a></li>
-                        <li><a href="Portfolio.html" class="hover:text-yellow-500">Portfolio</a></li>
+                        <li><a href="VR-Times.html" class="hover:text-yellow-500">AR/VR Times</a></li>
+                        <li><a href="Portfolio.html" class="text-yellow-500">Portfolio</a></li>
                         <li><a href="Contact Us.html" class="hover:text-yellow-500">Contact Us</a></li>
                     </ul>
                 </nav>
