--- a/service-vr.html
+++ b/service-vr.html
@@ -54,7 +54,7 @@
                             </a>
                             <!-- Dropdown Menu -->
                             <div class="dropdown-content">
-                                <a href="service-vr.html" class="gap-5 hover:text-yellow-500">Virtual Reality</a>
+                                <a href="service-vr.html" class="gap-5 text-yellow-500">Virtual Reality</a>
                                 <a href="service-vr-tranning.html" class="hover:text-yellow-500">VR Industrial
                                     Training</a>
                                 <a href="service-metaverse.html" class="hover:text-yellow-500">Metaverse Development</a>
@@ -63,7 +63,7 @@
                                 <a href="service-vr-consoltion.html" class="hover:text-yellow-500">VR Consultation</a>
                             </div>
                         </li>
-                        <li><a href="VR-Times.html" class="text-yellow-500">AR/VR Times</a></li>
+                        <li><a href="VR-Times.html" class="hover:text-yellow-500">AR/VR Times</a></li>
                         <li><a href="Portfolio.html" class="hover:text-yellow-500">Portfolio</a></li>
                         <li><a href="Contact Us.html" class="hover:text-yellow-500">Contact Us</a></li>
                     </ul>
