--- a/service-vr.html
+++ b/service-vr.html
@@ -48,7 +48,7 @@
                         <li><a href="home.html" class="hover:text-yellow-500">Home</a></li>
                         <!-- Dropdown for Services -->
                         <li class="relative group dropdown">
-                            <a href="" class="flex items-center dropbtn hover:text-yellow-500">
+                            <a href="" class="flex items-center dropbtn text-yellow-500">
                                 Services
                                 <img class="w-3 m-2 " src="assets/image/down-arrow.png" alt="down arrow">
                             </a>
