--- a/Contact Us.html
+++ b/Contact Us.html
@@ -153,10 +153,8 @@
                         </div>
                         <div class="grid grid-cols-1 md:grid-cols-1 gap-6 mt-10">
                             <div>
-                                <button type="submit"
+                                <input type="submit" value="SUBMIT"
                                     class="project-btn bg-sky-600 p-3 px-16 text-xl font-medium tracking-wider text-center">
-                                    SUBMIT
-                                </button>
                             </div>
                         </div>
                     </form>
