--- a/service-virtual-event.html
+++ b/service-virtual-event.html
@@ -222,7 +222,7 @@
                     </div>
                     <div class="w-full flex justify-between items-start mt-20">
                         <div class="w-1/2 bg-cover bg-center bg-no-repeat"
-                            style="background-image: url('assets/image/event-management.png');height: 400px;">
+                            style="background-image: url('assets/image/event-management.jpg');height: 400px;">
                         </div>
                         <div class="w-1/2 flex justify-center items-center">
                             <div class="w-1/2 flex flex-col justify-center items-center">
