--- a/service-virtual-event.html
+++ b/service-virtual-event.html
@@ -343,51 +343,49 @@
         <div class="my-16"></div>
     </main>
     <footer>
-        <div class="footer overflow-hidden">
-            <div class="container mx-auto px-4 flex items-center py-20 text-xl">
-                <div class="w-1/3">
+        <div class="footer overflow-hidden h-auto">
+            <div class="container  2xl:container  xl:container  lg:container  md:container  sm:container mx-auto px-4 flex items-center py-20 text-xl">
+                <div class="2xl:w-1/3 md:w-1/2">
                     <div class="flex flex-col justify-center items-start">
                         <div class="logo">
-                            <img src="assets/image/logo.png" alt="logo" style="width: 160px;">
+                            <img src="assets/image/logo.png" alt="logo" class="2xl:w-40 md:w-32">
                         </div>
                         <div class="footer-contain mt-10 ">
-                            <p class="text-zinc-400 opacity-75 text-2xl leading-relaxed tracking-wide">
-                                Lorem Ipsum is simply dummy text<br> of the printing and typesetting<br> industry. Lorem
-                                Ipsum has been<br> the industry's standard dummy text<br> ever since the 1500s, when
-                                an<br> unknown printer took a galley.
+                            <p class="text-zinc-400 opacity-75 2xl:text-2xl md:text-lg leading-relaxed tracking-wide">
+                                Lorem Ipsum is simply dummy text<br> of the printing and typesetting<br> industry. Lorem Ipsum has been<br> the industry's standard dummy text<br> ever since the 1500s, when an<br> unknown printer took a galley.
                             </p>
                         </div>
                     </div>
                 </div>
-                <div class="w-1/3 flex-col justify-center items-center text-center">
+                <div class="2xl:w-1/3 md:w-1/2 flex-col justify-center items-center text-center">
                     <div class="footer-title">
-                        <h4 class="font-2 text-yellow-500 uppercase font-medium text-4xl">Reach us</h4>
+                        <h4 class="font-2 text-yellow-500 uppercase font-medium 2xl:text-4xl md:text-3xl" >Reach us</h4>
                     </div>
-                    <div class="banner-border-2 pb-4"></div>
+                    <div class="banner-border-2 pb-4"></div>   
                     <div class="footer-social-icon flex justify-evenly mt-10">
                         <div class="calendly">
-                            <a href="" class="flex flex-col items-center justify-center">
-                                <img src="assets/image/calendly.png" alt="Calendly" class="h-20">
-                                <span class="pt-5">Book a Meeting On<br> Calendly</span>
+                            <a href=""  class="flex flex-col items-center justify-center">
+                                <img src="assets/image/calendly.png" alt="Calendly" class="2xl:h-20 md:h-14">
+                                <span class="2xl:pt-5 2xl:text-xl md:text-base md:pt-3">Book a Meeting On<br> Calendly</span>
                             </a>
                         </div>
                         <div class="whatsapp">
                             <a href="" class=" flex flex-col items-center justify-center">
-                                <img src="assets/image/whatsapp.png" alt="whatsapp" class="h-20">
-                                <span class="pt-5">Connect With Us<br> On WhatsApp</span>
+                                <img src="assets/image/whatsapp.png" alt="whatsapp" class="2xl:h-20 md:h-14">
+                                <span class="2xl:pt-5 2xl:text-xl md:text-base md:pt-3">Connect With Us<br> On WhatsApp</span>
                             </a>
                         </div>
                     </div>
                     <div class="footer-social-icon mt-10">
                         <div class="email">
-                            <a href="" class="flex flex-col items-center justify-center">
-                                <img src="assets/image/email.png" alt="email" class="h-20">
-                                <span class="pt-5">Contact<br> @twinreality.in</span>
+                            <a href=""  class="flex flex-col items-center justify-center">
+                                <img src="assets/image/email.png" alt="email" class="2xl:h-20 md:h-14">
+                                <span class="2xl:pt-5 2xl:text-xl md:text-base md:pt-3">Contact<br> @twinreality.in</span>
                             </a>
                         </div>
                     </div>
                 </div>
-                <div class="w-1/3 twin-reality-img footer-img relative"></div>
+                <div class="2xl:w-1/3 2xl:block twin-reality-img footer-img relativ md:hidden"></div>
             </div>
         </div>
     </footer>
