--- a/home.html
+++ b/home.html
@@ -227,28 +227,28 @@
                         <div class="flex flex-col items-center">
                             <div class="2xl:w-24 2xl:h-24 md:h-16 md:w-16 choose-bg  p-4" style="background: rgb(36,31,52);background: linear-gradient(127deg, rgba(36,31,52,1) 0%, rgba(36,27,59,1) 22%, rgba(14,7,32,1) 55%);
                             border: 2px solid #241e37;">
-                                <img class="w-10" src="assets/image/joystick.png" alt="joystick">
+                                <img class="w-20" src="assets/image/joystick.png" alt="joystick">
                             </div>
                             <p class="text-center mt-6 2xl:text-2xl md:text-lg">Modern Technology</p>
                         </div>
                         <div class="flex flex-col items-center">
                             <div class="2xl:w-24 2xl:h-24 md:h-16 md:w-16 choose-bg  p-4" style="background: rgb(36,31,52);background: linear-gradient(127deg, rgba(36,31,52,1) 0%, rgba(36,27,59,1) 22%, rgba(14,7,32,1) 55%);
                             border: 2px solid #241e37;">
-                                <img class="w-10" src="assets/image/settings.png" alt="settings">
+                                <img class="w-20" src="assets/image/settings.png" alt="settings">
                             </div>
                             <p class="text-center mt-6 2xl:text-2xl md:text-lg">Cost Effective</p>
                         </div>
                         <div class="flex flex-col items-center">
                             <div class="2xl:w-24 2xl:h-24 md:h-16 md:w-16 choose-bg  p-4" style="background: rgb(36,31,52);background: linear-gradient(127deg, rgba(36,31,52,1) 0%, rgba(36,27,59,1) 22%, rgba(14,7,32,1) 55%);
                             border: 2px solid #241e37;">
-                                <img class="w-10" src="assets/image/costumer-service.png" alt="costumer-service">
+                                <img class="w-20" src="assets/image/costumer-service.png" alt="costumer-service">
                             </div>
                             <p class="text-center mt-6 2xl:text-2xl md:text-lg">Versatile Applications</p>
                         </div>
                         <div class="flex flex-col items-center">
                             <div class="2xl:w-24 2xl:h-24 md:h-16 md:w-16 choose-bg  p-4" style="background: rgb(36,31,52);background: linear-gradient(127deg, rgba(36,31,52,1) 0%, rgba(36,27,59,1) 22%, rgba(14,7,32,1) 55%);
                             border: 2px solid #241e37;">
-                                <img class="w-10" src="assets/image/bonus.png" alt="bonus">
+                                <img class="w-20" src="assets/image/bonus.png" alt="bonus">
                             </div>
                             <p class="text-center mt-6 2xl:text-2xl md:text-lg">Scalability</p>
                         </div>
@@ -274,7 +274,7 @@
                         real-<br>time adaptability, and highly immersive services for Virtual Reality<br> applications .
                     </p>
                 </div>
-                <div class="2xl:w-3/6 2xl:block twin-reality-img reality-img relative md:hidden"></div>
+                <div class="2xl:w-3/6 2xl:block twin-reality-img reality-img bg-cover relative md:hidden"></div>
             </div>
             <div class="2xl:my-28"></div>
             <div class="container  2xl:container  xl:container  lg:container  md:container  sm:container mx-auto px-4 2xl:flex 2xl:flex-row md:flex-col items-center py-4 text-xl">
