--- a/service-virtual-event.html
+++ b/service-virtual-event.html
@@ -48,7 +48,7 @@
                         <li><a href="home.html" class="hover:text-yellow-500">Home</a></li>
                         <!-- Dropdown for Services -->
                         <li class="relative group dropdown">
-                            <a href="" class="flex items-center dropbtn hover:text-yellow-500">
+                            <a href="" class="flex items-center dropbtn text-yellow-500">
                                 Services
                                 <img class="w-3 m-2 " src="assets/image/down-arrow.png" alt="down arrow">
                             </a>
@@ -63,7 +63,7 @@
                                 <a href="service-vr-consoltion.html" class="hover:text-yellow-500">VR Consultation</a>
                             </div>
                         </li>
-                        <li><a href="VR-Times.html" class="text-yellow-500">AR/VR Times</a></li>
+                        <li><a href="VR-Times.html" class="hover:text-yellow-500">AR/VR Times</a></li>
                         <li><a href="Portfolio.html" class="hover:text-yellow-500">Portfolio</a></li>
                         <li><a href="Contact Us.html" class="hover:text-yellow-500">Contact Us</a></li>
                     </ul>
@@ -222,7 +222,7 @@
                     </div>
                     <div class="w-full flex justify-between items-start mt-20">
                         <div class="w-1/2 bg-cover bg-center bg-no-repeat"
-                            style="background-image: url('assets/image/event-management.jpg');height: 400px;">
+                            style="background-image: url('assets/image/event-manegement.jpg');height: 400px;">
                         </div>
                         <div class="w-1/2 flex justify-center items-center">
                             <div class="w-1/2 flex flex-col justify-center items-center">
