--- a/VR-Times.html
+++ b/VR-Times.html
@@ -124,7 +124,7 @@
                                         (VR)....
                                     </p>
                                     <a href="VR Times blog details.html" class="pt-4 flex items-center">
-                                        <span class="font-2 text-base text-yellow-500 pr-5">READ MORE</span>
+                                        <span class="font-2  text-yellow-500 pr-5">READ MORE</span>
                                         <img class="w-14 h-4" src="assets/image/Arrow 1.png" alt="Arrow">
                                     </a>
                                 </div>
@@ -144,7 +144,7 @@
                                         While critics have spent the previous four years busy writing obituaries for Meta’s metaverse dream....
                                     </p>
                                     <a href="VR Times blog details.html" class="pt-4 flex items-center">
-                                        <span class="font-2 text-base text-yellow-500 pr-5">READ MORE</span>
+                                        <span class="font-2  text-yellow-500 pr-5">READ MORE</span>
                                         <img class="w-14 h-4" src="assets/image/Arrow 1.png" alt="Arrow">
                                     </a>
                                 </div>
@@ -164,7 +164,7 @@
                                         After a few years of waiting, Meta Connect 2023 finally reignited the excitement in the virtual reality....
                                     </p>
                                     <a href="VR Times blog details.html" class="pt-4 flex items-center">
-                                        <span class="font-2 text-base text-yellow-500 pr-5">READ MORE</span>
+                                        <span class="font-2  text-yellow-500 pr-5">READ MORE</span>
                                         <img class="w-14 h-4" src="assets/image/Arrow 1.png" alt="Arrow">
                                     </a>
                                 </div>
@@ -186,7 +186,7 @@
                                         Imagine living in a world where creating beautiful 3D models and animations is as simple....
                                     </p>
                                     <a href="VR Times blog details.html" class="pt-4 flex items-center">
-                                        <span class="font-2 text-base text-yellow-500 pr-5">READ MORE</span>
+                                        <span class="font-2  text-yellow-500 pr-5">READ MORE</span>
                                         <img class="w-14 h-4" src="assets/image/Arrow 1.png" alt="Arrow">
                                     </a>
                                 </div>
@@ -206,7 +206,7 @@
                                         VR training can provide a number of benefits for companies, including improved learning outcomes....
                                     </p>
                                     <a href="VR Times blog details.html" class="pt-4 flex items-center">
-                                        <span class="font-2 text-base text-yellow-500 pr-5">READ MORE</span>
+                                        <span class="font-2  text-yellow-500 pr-5">READ MORE</span>
                                         <img class="w-14 h-4" src="assets/image/Arrow 1.png" alt="Arrow">
                                     </a>
                                 </div>
@@ -226,7 +226,7 @@
                                         After a few years of waiting, Meta Connect 2023 finally reignited the excitement in the virtual reality....
                                     </p>
                                     <a href="VR Times blog details.html" class="pt-4 flex items-center">
-                                        <span class="font-2 text-base text-yellow-500 pr-5">READ MORE</span>
+                                        <span class="font-2  text-yellow-500 pr-5">READ MORE</span>
                                         <img class="w-14 h-4" src="assets/image/Arrow 1.png" alt="Arrow">
                                     </a>
                                 </div>
@@ -248,7 +248,7 @@
                                         This is definitely one of the easiest video explanations how we can have a 3d model using AI tools....
                                     </p>
                                     <a href="VR Times blog details.html" class="pt-4 flex items-center">
-                                        <span class="font-2 text-base text-yellow-500 pr-5">READ MORE</span>
+                                        <span class="font-2  text-yellow-500 pr-5">READ MORE</span>
                                         <img class="w-14 h-4" src="assets/image/Arrow 1.png" alt="Arrow">
                                     </a>
                                 </div>
@@ -268,7 +268,7 @@
                                         The term “Metaverse” has been with us since 1992, appearing in Neal Stephenson’s novel....
                                     </p>
                                     <a href="VR Times blog details.html" class="pt-4 flex items-center">
-                                        <span class="font-2 text-base text-yellow-500 pr-5">READ MORE</span>
+                                        <span class="font-2  text-yellow-500 pr-5">READ MORE</span>
                                         <img class="w-14 h-4" src="assets/image/Arrow 1.png" alt="Arrow">
                                     </a>
                                 </div>
@@ -288,7 +288,7 @@
                                         Virtual Reality (VR) is an innovative technology that has the potential to revolutionize the automotive industry....
                                     </p>
                                     <a href="VR Times blog details.html" class="pt-4 flex items-center">
-                                        <span class="font-2 text-base text-yellow-500 pr-5">READ MORE</span>
+                                        <span class="font-2  text-yellow-500 pr-5">READ MORE</span>
                                         <img class="w-14 h-4" src="assets/image/Arrow 1.png" alt="Arrow">
                                     </a>
                                 </div>
@@ -373,13 +373,13 @@
                         <div class="calendly">
                             <a href=""  class="flex flex-col items-center justify-center">
                                 <img src="assets/image/calendly.png" alt="Calendly" class="2xl:h-20 md:h-14">
-                                <span class="2xl:pt-5 2xl:text-xl md:text-base md:pt-3">Book a Meeting On<br> Calendly</span>
+                                <span class="2xl:pt-5 2xl:text-xl md: md:pt-3">Book a Meeting On<br> Calendly</span>
                             </a>
                         </div>
                         <div class="whatsapp">
                             <a href="" class=" flex flex-col items-center justify-center">
                                 <img src="assets/image/whatsapp.png" alt="whatsapp" class="2xl:h-20 md:h-14">
-                                <span class="2xl:pt-5 2xl:text-xl md:text-base md:pt-3">Connect With Us<br> On WhatsApp</span>
+                                <span class="2xl:pt-5 2xl:text-xl md: md:pt-3">Connect With Us<br> On WhatsApp</span>
                             </a>
                         </div>
                     </div>
@@ -387,7 +387,7 @@
                         <div class="email">
                             <a href=""  class="flex flex-col items-center justify-center">
                                 <img src="assets/image/email.png" alt="email" class="2xl:h-20 md:h-14">
-                                <span class="2xl:pt-5 2xl:text-xl md:text-base md:pt-3">Contact<br> @twinreality.in</span>
+                                <span class="2xl:pt-5 2xl:text-xl md: md:pt-3">Contact<br> @twinreality.in</span>
                             </a>
                         </div>
                     </div>
